# synthgauge

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  logo_gauge_credit.txt  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml  config.yml
docs/: .buildinfo  demo.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: demo.doctree  environment.pickle  index.doctree
docs/.doctrees/autoapi/: index.doctree
docs/.doctrees/autoapi/synthgauge/: index.doctree
docs/.doctrees/autoapi/synthgauge/datasets/: index.doctree
docs/.doctrees/autoapi/synthgauge/evaluator/: index.doctree
docs/.doctrees/autoapi/synthgauge/metrics/: index.doctree
docs/.doctrees/autoapi/synthgauge/metrics/classification/: index.doctree
docs/.doctrees/autoapi/synthgauge/metrics/cluster/: index.doctree
docs/.doctrees/autoapi/synthgauge/metrics/correlation/: index.doctree
docs/.doctrees/autoapi/synthgauge/metrics/density/: index.doctree
docs/.doctrees/autoapi/synthgauge/metrics/nist/: index.doctree
docs/.doctrees/autoapi/synthgauge/metrics/privacy/: index.doctree
docs/.doctrees/autoapi/synthgauge/metrics/propensity/: index.doctree
docs/.doctrees/autoapi/synthgauge/metrics/univariate/: index.doctree
docs/.doctrees/autoapi/synthgauge/plot/: index.doctree
docs/.doctrees/autoapi/synthgauge/utils/: index.doctree
docs/_modules/: index.html
docs/_modules/synthgauge/: datasets.html  evaluator.html  plot.html  utils.html
docs/_modules/synthgauge/metrics/: classification.html  cluster.html  correlation.html  density.html  nist.html  privacy.html  propensity.html  univariate.html
docs/_sources/: demo.nblink.txt  index.rst.txt
docs/_sources/autoapi/synthgauge/: index.rst.txt
docs/_sources/autoapi/synthgauge/datasets/: index.rst.txt
docs/_sources/autoapi/synthgauge/evaluate/: index.rst.txt
docs/_sources/autoapi/synthgauge/evaluator/: index.rst.txt
docs/_sources/autoapi/synthgauge/metrics/: index.rst.txt
docs/_sources/autoapi/synthgauge/metrics/classification/: index.rst.txt
docs/_sources/autoapi/synthgauge/metrics/cluster/: index.rst.txt
docs/_sources/autoapi/synthgauge/metrics/correlation/: index.rst.txt
docs/_sources/autoapi/synthgauge/metrics/density/: index.rst.txt
docs/_sources/autoapi/synthgauge/metrics/nist/: index.rst.txt
docs/_sources/autoapi/synthgauge/metrics/privacy/: index.rst.txt
docs/_sources/autoapi/synthgauge/plot/: index.rst.txt
docs/autoapi/: index.html
docs/autoapi/synthgauge/: index.html
docs/autoapi/synthgauge/datasets/: index.html
docs/autoapi/synthgauge/evaluator/: index.html
docs/autoapi/synthgauge/metrics/: index.html
docs/autoapi/synthgauge/metrics/classification/: index.html
docs/autoapi/synthgauge/metrics/cluster/: index.html
docs/autoapi/synthgauge/metrics/correlation/: index.html
docs/autoapi/synthgauge/metrics/density/: index.html
docs/autoapi/synthgauge/metrics/nist/: index.html
docs/autoapi/synthgauge/metrics/privacy/: index.html
docs/autoapi/synthgauge/metrics/propensity/: index.html
docs/autoapi/synthgauge/metrics/univariate/: index.html
docs/autoapi/synthgauge/plot/: index.html
docs/autoapi/synthgauge/utils/: index.html
docs_src/source/: conf.py  index.rst
docs_src/source/autoapi/synthgauge/evaluator/: index.rst
docs_src/source/autoapi/synthgauge/plot/: index.rst
docs_src/source/autoapi/synthgauge/utils/: index.rst
examples/: demo.ipynb  demo_notebook.ipynb
src/synthgauge/: __init__.py  datasets.py  evaluate.py  evaluator.py  plot.py  utils.py
src/synthgauge/metrics/: __init__.py  classification.py  cluster.py  correlation.py  density.py  nist.py  privacy.py  propensity.py  univariate.py  univariate_distance.py
tests/: __init__.py  _test_plot.py  conftest.py  test_datasets.py  test_evaluate.py  test_evaluator.py  test_metrics.py  test_metrics_classification.py  test_metrics_cluster.py  test_metrics_correlation.py  test_metrics_density.py  test_metrics_examples.py  test_metrics_nist.py  test_metrics_privacy.py  test_metrics_propensity.py  test_metrics_univariate.py  test_metrics_univariate_distance.py  test_plot.py  test_utils.py  test_version.py  utils.py
(+9 files in other folders)
