[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.interrogate]
ignore-init-method = true
fail-under = 100
verbose = 1

[tool.coverage.report]
omit = ["src/**/__init__.py"]
