[metadata]
name = synthgauge
version = attr:synthgauge.__version__
author = Office For National Statistics Data Science Campus
author_email = datacampus@ons.gov.uk
description = A package for evaluating synthetic data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/datasciencecampus/synthgauge
project_urls =
    Documentation = https://datasciencecampus.github.io/synthgauge
    Bug Tracker = https://github.com/datasciencecampus/synthgauge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Open Government Licence
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    kmodes>=0.11.1
    matplotlib>=3.3.2
    numpy>=1.19.2
    scikit-learn>=0.24.0
    pandas>=1.1.3
    scipy>=1.5.2
    seaborn==0.11.0

[options.packages.find]
where = src
