[metadata]
name = synthgauge
version = attr:synthgauge.__version__
author = Office For National Statistics Data Science Campus
author_email = datacampus@ons.gov.uk
description = A package for evaluating synthetic data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/datasciencecampus/synthgauge
project_urls =
    Documentation = https://datasciencecampus.github.io/synthgauge
    Bug Tracker = https://github.com/datasciencecampus/synthgauge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    kmodes>=0.11.1
    matplotlib>=3.3.2
    numpy>=1.19.2
    scikit-learn>=0.24.0
    pandas>=1.1.3
    scipy>=1.5.2
    seaborn>=0.11.0,<0.12.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    black>=22.3.0
    flake8>=4.0.1
    hypothesis>=6.47.2; python_version>'3.6'
    hypothesis==6.31.6; python_version<'3.7'
    interrogate>=1.5.0
    isort>=5.10.1
    nbsphinx==0.8.9; python_version>'3.6'
    nbsphinx==0.8.8; python_version<'3.7'
    nbsphinx_link==1.3.0
    pre-commit>=2.17.0
    pytest>=6.2.5
    pytest-cov==3.0.0
    sphinx==4.3.2
    sphinx-autoapi==1.8.4
    sphinx-rtd-theme==1.0.0
