[metadata]
name = synthgauge
version = attr:synthgauge.__version__
author = Office For National Statistics Data Science Campus
author_email = datacampus@ons.gov.uk
description = A package for evaluating synthetic data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/datasciencecampus/synthgauge
project_urls =
    Documentation = https://datasciencecampus.github.io/synthgauge
    Bug Tracker = https://github.com/datasciencecampus/synthgauge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    kmodes==0.12.2
    matplotlib==3.5.3
    numpy==1.21.6
    scikit-learn==1.0.2
    pandas==1.3.5
    scipy==1.7.3
    seaborn==0.11.2

[options.packages.find]
where = src

[options.extras_require]
docs =
    ipython==7.17.0
    nbsphinx==0.8.9
    nbsphinx_link==1.3.0
    sphinx==4.3.2
    sphinx-autoapi==1.8.4
    sphinx-rtd-theme==1.0.0
test =
    hypothesis==6.54.6
    pytest==7.1.3
    pytest-cov==3.0.0
    pytest-randomly==3.12.0
dev =
    black==22.8.0
    flake8==5.0.4
    interrogate==1.5.0
    isort==5.10.1
    pre-commit==2.20.0
    synthgauge[docs]
    synthgauge[test]
